# autocompleted

./: .env.sample  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: 1-check.yml  2-release.yml  3-publish.yml  build.yml  run-checks.yml
sql/: fetch_tags_a.sql  fetch_tags_b.sql
src/: main.rs
