[package]
name = "autocompleted"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
moka = { version = "0.6.1", features = ["future"] }
config = "0.10.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"
unicode-normalization = "0.1.19"
log = "0.4"
env_logger = "0.9.0"
